Add visual marks for In/Out loop
Former-commit-id: a0ecd236c26860068e84a1d429427362fbb64070

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -126,6 +126,8 @@
         <file>data/icons/view-refresh.svg</file>
         <file>data/icons/align-vertical-center.svg</file>
         <file>data/icons/media-playback-loop.svg</file>
+        <file>data/icons/media-playback-loop-in.svg</file>
+        <file>data/icons/media-playback-loop-out.svg</file>
         <file>data/icons/media-playback-metronome.svg</file>
         <file>data/icons/midi-input.svg</file>
         <file>data/icons/media-playback-pan.svg</file>
